properly detect when the output fails (eg, full filesystem) and do not delete the input file.  patch from PR#35048.